mule-user-guide/v/3.5/the-properties-editor.adoc
= The Properties Editor
:keywords: properties, editor, mel, auto-complete

Anypoint Studio's Visual Editor enables you to click a building block on the canvas to access its *Properties Editor* in a tab in the console (below). 

image:properties+editor.png[properties+editor]

Click the tabs at left (in the above example, *General*, *Advanced*, *References*, and *Documentation*) to access various categories of attributes associated with the building block.

=== MEL Auto-Complete

If you are configuring a field that supports expressions and need help with syntax, you can access MEL suggestions by one of two methods.

* Place your cursor inside the brackets in a field that has *`#[]`* pre-populated for you, then press *Ctrl + Space Bar*.
* Enter `#[` to open a new MEL expression and display suggestions, as shown below.
+
image:auto_complete.png[auto_complete]

[WARNING]
Note that the autocomplete functionality described here works in the *Visual Editor only*. Although Studio's XML tab does offer some autocomplete options, the suggestions there are limited by Eclipse and are not based on DataSense or Mule Expression Language.

== See Also

* Learn more about link:/mule-user-guide/v/3.7/elements-in-a-mule-flow[Elements in a Mule Flow].
